--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Montrix | Content Management</title>
+    <title>Motrix | Content Management</title>
   </head>
   <body>
     <div id="root"></div>
